# rules_web_module

./: .bazelrc  .gitignore  .swcrc  BUILD.bazel  README.md  WORKSPACE  jest.config.js  package.json  rollup.config.js  tsconfig.json
app/: App.tsx  BUILD.bazel  asset.txt  index.html
bazel/js/: constants.bzl  index.bzl  npm_web_module_build.bzl  provider.bzl  web_module.bzl  web_module_build.bzl  web_module_library.bzl  web_module_test.bzl
bazel/js/devserver/: BUILD.bazel  devserver.ts  index.bzl
bazel/js/env/: BUILD.bazel  index.bzl  js_env_transition.bzl  node_inject.bzl
bazel/js/file_loader/: BUILD.bazel  index.bzl  index.ts  loader.ts
bazel/js/link_importmaps/: index.bzl  index.ts
bazel/js/link_web_modules/: BUILD.bazel  index.bzl
bazel/js/rollup_importmap_plugin/: BUILD.bazel  index.ts
bazel/js/systemjs/: BUILD.bazel  index.ts
example/app/: App.test.tsx  App.tsx  AppRouter.tsx  AssetPage.tsx  BUILD.bazel  index.html  index.tsx
example/routes/about/: BUILD.bazel  index.tsx
npm/: BUILD.bazel  build.bzl
patches/: @bazel+rollup+5.2.0.patch
