load("//bazel/js:index.bzl", "link_importmaps", "web_module_app_server", "web_module_file_loader", "web_module_library", "web_module_test")
load("//bazel/js:constants.bzl", "DEPS", "SRCS_EXCLUDE_PATTERNS", "SRCS_PATTERNS", "TEST_DEPS", "TEST_SRCS_PATTERNS")

web_module_file_loader(
    name = "static-assets",
    assets = glob(["assets/*"]),
    module_name = "static",
)

web_module_library(
    name = "main",
    srcs = glob(
        SRCS_PATTERNS,
        exclude = SRCS_EXCLUDE_PATTERNS,
    ),
    deps = DEPS + [
        ":static-assets",
        "//npm:react",
        "//npm:react-dom",
        "//packages/menu",
    ],
)

web_module_test(
    name = "test",
    srcs = glob(TEST_SRCS_PATTERNS),
    data = [],
    # TODO
    # Tests fail due to https://github.com/bazelbuild/rules_nodejs/pull/3356
    expected_exit_code = 1,
    test_env = "jsdom",
    deps = TEST_DEPS + [
        ":main",
    ],
)

link_importmaps(
    name = "linked",
    out = "linked.importmap.json",
    js_env = {
        "JS_BUNDLE_FORMAT": "systemjs",
        "NODE_ENV": "production",
    },
    deps = [
        ":main",
        "//bazel/js/systemjs",
        "//npm:react/jsx-runtime",
    ],
)

web_module_app_server(
    name = "serve",
    data = [
        ":linked",
    ],
    importmap = "linked.importmap.json",
    index = "index.html",
    loaders = ["systemjs"],
)
