load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

ts_project(
    name = "compile",
    srcs = glob(["*.ts"]),
    declaration = False,
    extends = "//:tsconfig.json",
    link_workspace_root = True,
    tsconfig = {
        "extends": "../../../../tsconfig.json",
        "compilerOptions": {
            "declaration": False,
            "composite": False,
            "module": "esnext",
        },
    },
    deps = [
        "@npm//@types/express",
        "@npm//express",
    ],
)

rollup_bundle(
    name = "bundle",
    args = [
        "--plugin=@rollup/plugin-commonjs",
        "--plugin=@rollup/plugin-node-resolve",
        "--plugin=@rollup/plugin-replace",
        "--plugin=rollup-plugin-sourcemaps",
    ],
    entry_point = "devserver.js",
    format = "cjs",
    silent = True,
    sourcemap = "true",
    visibility = ["//visibility:public"],
    deps = [
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-replace",
        "@npm//rollup-plugin-sourcemaps",
    ],
)
