load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "compile",
    srcs = ["index.ts"],
    declaration = False,
    extends = "//:tsconfig.json",
    link_workspace_root = True,
    tsconfig = {
        "extends": "../../../../tsconfig.json",
        "compilerOptions": {
            "declaration": False,
            "composite": False,
            "importHelpers": False,
        },
    },
    deps = [
        "@npm//@jsenv/importmap",
        "@npm//@types/node",
        "@npm//tslib",
    ],
)

nodejs_binary(
    name = "tool",
    data = [":compile"],
    entry_point = "index.js",
    visibility = ["//visibility:public"],
)
